--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -3,17 +3,47 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="groupsView"
+            type="ru.g0rd1.peoplesfinder.ui.groups.GroupsView"/>
+
+        <import type="android.view.View"/>
+
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/download_members_button"
-            android:layout_width="wrap_content"
+            android:id="@+id/start_or_pause_button"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/fragment_groups_download_members_button_text"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:text="@{groupsView.startOrPauseButtonText}"
+            app:layout_constraintBottom_toTopOf="@id/buttons_barrier"
+            app:layout_constraintEnd_toStartOf="@+id/stop_button"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/fragment_groups_download_button_start_download"/>
+
+        <Button
+            android:id="@+id/stop_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:text="@string/fragment_groups_download_button_stop_download"
+            android:visibility="@{groupsView.showStopButton ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toTopOf="@id/buttons_barrier"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/start_or_pause_button"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -25,7 +55,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/download_members_button"
+            app:layout_constraintTop_toBottomOf="@id/start_or_pause_button"
             tools:listitem="@layout/item_group"/>
 
         <ProgressBar
@@ -39,6 +69,14 @@
             app:layout_constraintStart_toStartOf="@id/groups"
             app:layout_constraintTop_toTopOf="@id/groups"
             tools:visibility="visible"/>
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/buttons_barrier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="stop_button,start_or_pause_button"
+            tools:layout_editor_absoluteY="731dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
