--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -9,13 +9,24 @@
             name="vm"
             type="ru.g0rd1.peoplesfinder.ui.groups.GroupsViewModel" />
 
-        <import type="android.view.View"/>
+        <import type="android.view.View" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/buttons_container"
+            app:layout_constraintEnd_toEndOf="@id/buttons_container"
+            app:layout_constraintStart_toStartOf="@id/buttons_container"
+            app:layout_constraintTop_toTopOf="@id/buttons_container"
+            app:visible="@{vm.showCommandProcessingLoader}"
+            tools:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/buttons_container"
@@ -25,7 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:visible="@{vm.buttonsVisible}">
+            app:visible="@{vm.showContent}">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/pause_button"
@@ -37,6 +48,7 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="4dp"
                 android:layout_weight="0.5"
+                android:enabled="@{!vm.commandProcessing}"
                 android:lines="2"
                 android:onClick="@{() -> vm.pauseLoad()}"
                 android:text="@string/fragment_groups_download_button_pause_download"
@@ -52,6 +64,7 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="4dp"
                 android:layout_weight="0.5"
+                android:enabled="@{!vm.commandProcessing}"
                 android:lines="2"
                 android:onClick="@{() -> vm.reload()}"
                 android:text="@string/fragment_groups_download_button_reload"
@@ -67,6 +80,7 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="4dp"
                 android:layout_weight="0.5"
+                android:enabled="@{!vm.commandProcessing}"
                 android:lines="2"
                 android:onClick="@{() -> vm.continueLoad()}"
                 android:text="@string/fragment_groups_download_button_continue_load"
@@ -82,6 +96,7 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="4dp"
                 android:layout_weight="0.5"
+                android:enabled="@{!vm.commandProcessing}"
                 android:lines="2"
                 android:onClick="@{() -> vm.startLoad()}"
                 android:text="@string/fragment_groups_download_button_start_download"
@@ -97,6 +112,7 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="4dp"
                 android:layout_weight="0.5"
+                android:enabled="@{!vm.commandProcessing}"
                 android:lines="2"
                 android:onClick="@{() -> vm.cancelLoad()}"
                 android:text="@string/fragment_groups_download_button_cancel_download"
@@ -116,7 +132,8 @@
             android:progress="@{vm.loadedMembersCount}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/buttons_container" />
+            app:layout_constraintTop_toBottomOf="@id/buttons_container"
+            app:visible="@{vm.showContent}" />
 
         <TextView
             android:id="@+id/errorText"
@@ -143,19 +160,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/errorText"
-            tools:listitem="@layout/item_group"/>
+            app:visible="@{vm.showContent}"
+            tools:listitem="@layout/item_group" />
 
         <ProgressBar
             android:id="@+id/loader"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@id/groups"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/groups"
-            app:layout_constraintTop_toTopOf="@id/groups"
-            tools:visibility="visible"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:visible="@{vm.showLoader}"
+            tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
