Переименовываем ViewModel в ViewData

--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="vm"
-            type="ru.g0rd1.peoplesfinder.ui.groups.GroupViewModel" />
+            type="ru.g0rd1.peoplesfinder.ui.groups.GroupViewData" />
 
     </data>
 
