--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="red">#D50000</color>
     <color name="green">#00C853</color>
     <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="placeholder_color">#80000000</color>
 
