--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -3,177 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <variable
-            name="vm"
-            type="ru.g0rd1.peoplesfinder.ui.groups.GroupsViewModel" />
-
-        <import type="android.view.View" />
-
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ProgressBar
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/buttons_container"
-            app:layout_constraintEnd_toEndOf="@id/buttons_container"
-            app:layout_constraintStart_toStartOf="@id/buttons_container"
-            app:layout_constraintTop_toTopOf="@id/buttons_container"
-            app:visible="@{vm.showCommandProcessingLoader}"
-            tools:visibility="visible" />
-
-        <LinearLayout
-            android:id="@+id/buttons_container"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:visible="@{vm.showContent}">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/pause_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
-                android:layout_weight="0.5"
-                android:enabled="@{!vm.commandProcessing}"
-                android:lines="2"
-                android:onClick="@{() -> vm.pauseLoad()}"
-                android:text="@string/fragment_groups_download_button_pause_download"
-                app:visible="@{vm.pauseButtonVisible}" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/reload_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
-                android:layout_weight="0.5"
-                android:enabled="@{!vm.commandProcessing}"
-                android:lines="2"
-                android:onClick="@{() -> vm.reload()}"
-                android:text="@string/fragment_groups_download_button_reload"
-                app:visible="@{vm.reloadButtonVisible}" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/continue_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
-                android:layout_weight="0.5"
-                android:enabled="@{!vm.commandProcessing}"
-                android:lines="2"
-                android:onClick="@{() -> vm.continueLoad()}"
-                android:text="@string/fragment_groups_download_button_continue_load"
-                app:visible="@{vm.continueButtonVisible}" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/start_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
-                android:layout_weight="0.5"
-                android:enabled="@{!vm.commandProcessing}"
-                android:lines="2"
-                android:onClick="@{() -> vm.startLoad()}"
-                android:text="@string/fragment_groups_download_button_start_download"
-                app:visible="@{vm.startButtonVisible}" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/cancel_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
-                android:layout_weight="0.5"
-                android:enabled="@{!vm.commandProcessing}"
-                android:lines="2"
-                android:onClick="@{() -> vm.cancelLoad()}"
-                android:text="@string/fragment_groups_download_button_cancel_download"
-                app:visible="@{vm.cancelButtonVisible}" />
-
-        </LinearLayout>
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
-            android:max="@{vm.membersCount}"
-            android:progress="@{vm.loadedMembersCount}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/buttons_container"
-            app:visible="@{vm.showContent}" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/errorText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@{vm.errorText}"
-            android:textColor="@color/red"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/progressBar"
-            app:visible="@{vm.errorTextVisible}"
-            tools:text="Произошла ошибка при загрузке" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Мои группы" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/groups"
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Другие группы" />
+
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/groups_fragment_container"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:orientation="vertical"
-            app:items="@{vm.groupViewModels}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/errorText"
-            app:visible="@{vm.showContent}"
-            tools:listitem="@layout/item_group" />
-
-        <ProgressBar
-            android:id="@+id/loader"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:visible="@{vm.showLoader}"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toBottomOf="@id/tabs"
+            tools:ignore="FragmentTagUsage" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
