--- a/app/src/main/res/layout/dialog_single_choose.xml
+++ b/app/src/main/res/layout/dialog_single_choose.xml
@@ -11,6 +11,8 @@
 
         <import type="ru.g0rd1.peoplesfinder.ui.choose.single.SingleChooseItemViewData" />
 
+        <import type="kotlin.text.StringsKt" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -104,7 +106,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/searchTextContainer"
-            app:visible="@{!vm.items.empty}"
+            app:visible="@{!StringsKt.isBlank(vm.searchText) &amp;&amp; !vm.items.empty}"
             tools:listitem="@layout/item_choose">
 
         </androidx.recyclerview.widget.RecyclerView>
@@ -121,7 +123,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/searchTextContainer"
-            app:visible="@{vm.items.empty}" />
+            app:visible="@{!StringsKt.isBlank(vm.searchText) &amp;&amp; vm.items.empty}" />
 
         <ProgressBar
             android:id="@+id/loader"
