Добавлено удаление/добавление людей в группы (избранные, заблокированные)

--- a/app/src/main/res/layout/dialog_user_detail_info.xml
+++ b/app/src/main/res/layout/dialog_user_detail_info.xml
@@ -21,9 +21,9 @@
             android:id="@+id/arrowLeft"
             android:layout_width="50dp"
             android:layout_height="0dp"
+            android:onClick="@{() -> vm.previousUser()}"
             android:scaleType="center"
             android:src="@drawable/ic_arrow_left"
-            android:onClick="@{() -> vm.previousUser()}"
             android:visibility="@{vm.showLeftArrow ? View.VISIBLE : View.INVISIBLE}"
             app:layout_constraintBottom_toTopOf="@id/groupIconContainer"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,8 +34,8 @@
             android:id="@+id/arrowRight"
             android:layout_width="50dp"
             android:layout_height="0dp"
-            android:scaleType="center"
             android:onClick="@{() -> vm.nextUser()}"
+            android:scaleType="center"
             android:src="@drawable/ic_arrow_right"
             android:visibility="@{vm.showRightArrow ? View.VISIBLE : View.INVISIBLE}"
             app:layout_constraintBottom_toTopOf="@id/groupIconContainer"
@@ -66,8 +66,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars[0]"
-                    tools:ignore="ContentDescription" />
+                    tools:ignore="ContentDescription"
+                    tools:srcCompat="@tools:sample/avatars[0]" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/infoContainer"
@@ -272,6 +272,10 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
                     android:alpha="@{vm.isBlocked ? 1.0F : 0.2F}"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:onClick="@{() -> vm.clickOnBlocked()}"
                     android:src="@drawable/ic_block"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/favorite"
@@ -287,6 +291,9 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
                     android:alpha="@{vm.isFavorite ? 1.0F : 0.2F}"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:onClick="@{() -> vm.clickOnFavorite()}"
                     android:src="@drawable/ic_star"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
